# BEGIN GPL LICENSE BLOCK
#
#     This program is free software: you can redistribute it and/or modify
#     it under the terms of the GNU General Public License as published by
#     the Free Software Foundation, either version 3 of the License, or
#     (at your option) any later version.
#
#     This program is distributed in the hope that it will be useful,
#     but WITHOUT ANY WARRANTY; without even the implied warranty of
#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#     GNU General Public License for more details.
#
#     You should have received a copy of the GNU General Public License
#     along with this program.  If not, see <https://www.gnu.org/licenses/>.
#
# END GPL LICENSE BLOCK

"""
File containing the class FolderError
"""
from src.error.GUI_error import GUIError


class PolygonFolderError(GUIError):
    """
    Error to use for folder errors.
    """

    def __init__(self, err_code: int = 0):
        """
        Constructor of the class PolygonFolderNotFoundError.
        """
        super(self).__init__(err_code)

        self.codes = {
            0: 'Polygon Folder not found in the program.'
        }
