@startuml
skinparam linetype polyline
skinparam linetype ortho

left to right direction

!startsub INTERNAL
package src.error {
    class src.error.BaseError
    class src.error.ExportError
    class src.error.GUIError
    class src.error.InterpolationError
    class src.error.TransformationError
    class src.error.NetcdfImportError
    class src.error.PolygonError
    class src.error.SceneError
    class src.error.FilterError
    class src.error.PolygonFolderError
    class src.error.MapTransformationError
}

src.error.BaseError <|-- src.error.PolygonFolderError
src.error.BaseError <|-- src.error.SceneError
src.error.BaseError <|-- src.error.PolygonError
src.error.BaseError <|-- src.error.ExportError
src.error.BaseError <|-- src.error.GUIError
src.error.BaseError <|-- src.error.NetcdfImportError
src.error.BaseError <|-- src.error.FilterError

src.error.BaseError <|-- src.error.TransformationError
src.error.BaseError <|-- src.error.InterpolationError
src.error.BaseError <|-- src.error.MapTransformationError
!endsub

!startsub EXTERNAL

!endsub
hide members

@enduml